# Prox-LoRA

./: .gitignore  Labels.ipynb  README.md  pyproject.toml  run_eval.sh  run_model.sh
notebooks/: Example BiomedCLIP.ipynb  Labels.ipynb  preprocess-retinopathy.ipynb
src/prox_lora/: robustness_eval.py  train.py
src/prox_lora/configs/: CNN_retinopathy.py  bmc_example.py  cifar_example.py  mnist_example.py  mnist_example_FISTA.py  mnist_example_ISTA.py
src/prox_lora/datasets/: base_data_module.py  cifar.py  common.py  diabetic_retinopathy.py  mnist.py  transforms.py
src/prox_lora/infrastructure/: cli.py  configs.py  slurm.py  trainer.py
src/prox_lora/models/: biomedclip.py  classifier.py  example_cnn.py
src/prox_lora/optimizers/: ADMM_optimizer.py  AdaProx.py  FISTA_optimizer.py  ISTA_optimizer.py  ProxAdam.py  ProxSAM.py  __init__.py  common.py
src/prox_lora/utils/: io.py  other.py
